test/data/resolver/valid/distinct_projection.cypher
MATCH (a:Person) RETURN DISTINCT a.name
