test/data/resolver/invalid/union_column_count_mismatch.cypher
MATCH (a:Person) RETURN a.name UNION MATCH (a:Person) RETURN a.name, a.age
